--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
 backend_url =https://claudiasenti-3030.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
-sentiment_analyzer_url=your code engine deployment url
+sentiment_analyzer_url=https://sentianalyzer.1o6q0mk31jxg.us-south.codeengine.appdomain.cloud/
