--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
 backend_url =https://claudiasenti-3030.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
-sentiment_analyzer_url =https://sentianalyzer.1ob2wnyr3fli.us-south.codeengine.appdomain.cloud/
+sentiment_analyzer_url =https://sentianalyzer.1ogwvfvued9y.us-south.codeengine.appdomain.cloud/
